--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://cuddly-markhor-1796.g8x.gcp-southamerica-east1.cockroachlabs.cloud:26257/defaultdb?sslmode=require
-spring.datasource.username=empregadb
-spring.datasource.password=9i_9VZxTUMqDMWa1L5E2LA
+spring.datasource.url=jdbc:postgresql:
+spring.datasource.username=username
+spring.datasource.password=senha
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.port=8081
